--- a/Home.html
+++ b/Home.html
@@ -59,8 +59,15 @@
 <!-- Main Site section, this section will change depending on what user is selecting-->
 <div id ="main" class="container-fluid">
 
-    <h2>STUFF GOES HERE</h2>
-
+    
+    <form>
+        <input type="text" id="userSearch" value="What are you looking for?" /> 
+    </form>
+    <button onclick="userSearch()">GO</button>
+    <div id="TOS" >
+            Here is some text
+    
+    </div>
 
 
 </div>
@@ -96,7 +103,7 @@
         </tr>
         <tr>
             <td>Home/Auto Repairs</td>
-            <td>Terms of Service</td>
+            <td><button onclick="showTOS()">Terms of Service</button></td>
             <td>Help@PointPerson.com</td>
         </tr>
         <tr>
@@ -105,6 +112,7 @@
         </tr>
         <tr>
             <td> Taxes</td>
+            <td id="Year">The Year is </td>
         </tr>
 
 
@@ -121,6 +129,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="script.js" ></script>
 </body>
 
 </html>
