--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Other CSS -->
-    <link rel="stylesheet" href ="css/css_pp.css">
+    <link rel="stylesheet" href ="css_pp.css">
     <title>Point Person</title>
   </head>
   <body>
@@ -59,20 +59,59 @@
 <!-- Main Site section, this section will change depending on what user is selecting-->
 <div id ="main" class="container-fluid">
 
-    
+
     <form>
-        <input type="text" id="userSearch" value="What are you looking for?" /> 
+        <input type="text" id="userSearch" value="What are you looking for?" />
     </form>
     <button onclick="userSearch()">GO</button>
     <div id="TOS" >
             Here is some text
-    
+    </div>
+    <div id="EC" >
+            Here is some text2
+</div>
+    <div id="WhatsaPointPerson" >
+            Here is some text3
+    </div>
+    <div id="HowtobeaPointPerson" >
+            Here is some text4
     </div>
 
+    <div id="Business" >
+            Here is some text5
+    </div>
+    <div id="Whatsthepoint" >
+            Here is some text6
+    </div>
+    <div id="BuyingSellingServices" >
+            Here is some text7
+    </div>
+    <div id="Technology" >
+            Here is some text8
+    </div>
+    <div id="PrivacyPolicy" >
+            Here is some text9
+    </div>
 
+    <div id="HomeAutoRepairs" >
+            Here is some text10
+    </div>
+    <div id="Lifestyle" >
+            Here is some text11
+    </div>
+    <div id="FeaturedPointPersonoftheWeek" >
+            Here is some text12
+    </div>
+    <div id="Taxes" >
+            Here is some text13
 </div>
 
-  
+<textarea id="myText">
+  Lorem ipsum...
+</textarea>
+</div>
+
+
 <!-- Bottom Navigation, done as a table -->
 <div id= "botNav">
 
@@ -84,35 +123,37 @@
             <th>Follow Us</th>
         </tr>
         <tr>
-            <td>Education & Career</td>
-            <td>What's a Point Person</td>
-            <td>How to be a Point Person?</td>
-            <td>Twitter</td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showEC()">Education & Career</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showWhatsaPointPerson()">What's a PointPerson</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showHowtobeaPointPerson()">How to be a PointPerson?</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTwitter()">Twitter</button></td>
         </tr>
         <tr>
-            <td>Business</td>
-            <td>What's the point?</td>
-            <td>Buying/Selling Services</td>
-            <td>Facebook</td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showBusiness()">Business</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showWhatsthepoint()">What's the point?</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showBuyingSellingServices()">Buying/Selling Services</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showFacebook()">Facebook</button></td>
         </tr>
         <tr>
-            <td>Technology</td>
-            <td>Privacy Policy</td>
-            <td>Email Us</td>
-            <td>Instagram</td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTechnology()">Technology</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showPrivacyPolicy()">Privacy Policy</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="EmailUs(); return false">Send</button>Email Us</td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showInstagram()">Instagram</button></td>
         </tr>
         <tr>
-            <td>Home/Auto Repairs</td>
-            <td><button onclick="showTOS()">Terms of Service</button></td>
-            <td>Help@PointPerson.com</td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showHomeAutoRepairs()">Home/Auto Repairs</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTOS()">Terms of Service</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showHelpPointPersoncom()">Help@PointPerson.com</button></td>
         </tr>
         <tr>
-            <td>Lifestyle</td>
-            <td>Featured PointPerson of the Week</td> <!-- Should we put this somewhere else?-->
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showLifestyle()">Lifestyle</button></td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showFeaturedPointPersonoftheWeek()">Featured PointPerson of the Week</button></td> <!-- Should we put this somewhere else?-->
         </tr>
         <tr>
-            <td> Taxes</td>
-            <td id="Year">The Year is </td>
+          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTaxes()">Taxes</button></td>
+          <td> </td>
+          <td> </td>
+          <td> PointPerson.com  </td>
         </tr>
 
 
