--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Other CSS -->
-    <link rel="stylesheet" href ="css_pp.css">
+    <link rel="stylesheet" href ="css\css_pp.css">
     <title>Point Person</title>
   </head>
   <body>
@@ -123,7 +123,7 @@
             <th>Follow Us</th>
         </tr>
         <tr>
-          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showEC()">Education & Career</button></td>
+          <td><button  onclick="showEC()">Education & Career</button></td>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showWhatsaPointPerson()">What's a PointPerson</button></td>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showHowtobeaPointPerson()">How to be a PointPerson?</button></td>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTwitter()">Twitter</button></td>
@@ -135,7 +135,7 @@
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showFacebook()">Facebook</button></td>
         </tr>
         <tr>
-          <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTechnology()">Technology</button></td>
+          <td><button  onclick="showTechnology()">Technology</button></td>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showPrivacyPolicy()">Privacy Policy</button></td>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="EmailUs(); return false">Send</button>Email Us</td>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showInstagram()">Instagram</button></td>
@@ -152,8 +152,8 @@
         <tr>
           <td><button style="background-color:rgb(64,64,64); border-color:rgb(64,64,64);color:white; border: none;" onclick="showTaxes()">Taxes</button></td>
           <td> </td>
-          <td> </td>
-          <td> PointPerson.com  </td>
+          <td><button onclick="alertTest()"> CLICK ME</button> </td>
+          <td id="pointDate"> PointPerson.com  </td>
         </tr>
 
 
