--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
         <table>
             <tr>
                 <th> Create Account</th>
-                <th><a href="/LogIn.html">Log In</a></th>
+                <th><a style="color:rgb(51,153,255)"; href="LogIn.html">Log In</a></th>
             </tr>
             <tr>
                 <td> Social News Feed</td>
