--- a/Home.html
+++ b/Home.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Other CSS -->
-    <link rel="stylesheet" href ="css_pp.css">
+    <link rel="stylesheet" href ="css/css_pp.css">
     <title>Point Person</title>
   </head>
   <body>
