--- a/Home.html
+++ b/Home.html
@@ -8,44 +8,33 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Other CSS -->
-    <link rel="stylesheet" href ="css/css_pp.css">
+    <link rel="stylesheet" href ="HomePageCSS.css">
     <title>Point Person</title>
   </head>
   <body>
 
       <!--Title Block NOT LOGGED ON-->
       <div class="title">
-          <h1>PointPerson</h1>
-          <p>Find services and learn from others</p>
-      </div>
-
-      <div id="unlogged">
-          <table id="TopRight">
-              <tr>
-                  <th> Create Account </th> <!--TODO Create Account Page-->
-                  <th><a style="color:white" ; href="LogIn.html">Log In</a></th>
-              </tr>
-              <tr>
-                  <td style="color:rgb(28,18,18)";>  Hello  </td>
-              </tr>
-              <tr>
+          <button class="logo"onclick="goHome()"> <img src="pointpersonlogo3.jpg"> </button>
+          <p><a style="color:rgb(205,230,255)";> Find services and learn from others </a><p>
+              <table id="TopRight">
+                    <tr>
+                        <th style="width:10%";><a style="color:rgb(85,142,213)"; href= "CreateAccount.html">Create Account</a> </th>
+                        <th style="width:5%";><a style="color:rgb(85,142,213)"; href="Log_In.html">Log In</a></th>
+                    </tr>
+                    </table>
+          </div>
+    </div>
 
 
-              </tr>
-          </table>
-      </div>
-
-
-      <!-- Nav Bar Selections-->
-      <!-- Used https://getbootstrap.com/docs/4.0/components/navbar/ as guidance for Navbar -->
-      <nav class="selectNav">
+          <nav class="selectNav">
           <ul>
-              <li><button class="navButton" onclick="showEC()">Education and Career</button></li>
+              <li><button class="navButton" onclick="showEC()">Education & Career</button></li>
+              <li><button class="navButton" onclick="showHomeAuto()">Home & Auto</button></li>
+              <li><button class="navButton" onclick="showTechnologyProgramming()">Technology & Programming</button></li>
+  <li><button class="navButton" onclick="showFinancial()">Financial & Investing</button></li>
+              <li><button class="navButton" onclick="showLifestyle()">Lifestyle & Health</button></li>
               <li><button class="navButton" onclick="showBusiness()">Business</button></li>
-              <li><button class="navButton" onclick="showTechnology()">Technology</button></li>
-              <li><button class="navButton" onclick="showHomeAutoRepairs()">Home/Auto Repairs</button></li>
-              <li><button class="navButton" onclick="showLifestyle()">Lifestyle</button></li>
-              <li><button class="navButton" onclick="showTaxes()">Taxes</button></li>
           </ul>
       </nav>
 
@@ -53,86 +42,67 @@
       <!-- Main Site section, this section will change depending on what user is selecting-->
       <div id="main" class="container-fluid">
           <div id="searchBar">
+            <table id="searchRow">
+              <tr>
               <form class = "searchForm">
-                  <input type="text" id="userSearch" value="What are you looking for?" />
+                  <input type="searchText" id="userSearch" value="What are you looking for?" />
               </form>
               <button class="searchButton" onclick="userSearch()">GO</button>
+            </tr>
+          </table>
           </div>
 
-          <div id="TOS">
-              Here is some text
-          </div>
           <div id="EC">
-              Here is some text2
+              Education Career
           </div>
-          <div id="WhatsaPointPerson">
-              Here is some text3
+          <div id="Financial">
+              Financial
           </div>
-          <div id="HowtobeaPointPerson">
-              Here is some text4
-          </div>
-
-          <div id="Business">
-              Here is some text5
-          </div>
-          <div id="Whatsthepoint">
-              Here is some text6
-          </div>
-          <div id="BuyingSellingServices">
-              Here is some text7
-          </div>
-          <div id="Technology">
-              Here is some text8
-          </div>
-          <div id="PrivacyPolicy">
-              Here is some text9
-          </div>
-
-          <div id="HomeAutoRepairs">
-              Here is some text10
+          <div id="HomeAuto">
+              Home & Auto
           </div>
           <div id="Lifestyle">
-              Here is some text11
+              Lifestyle & Health
           </div>
-          <div id="FeaturedPointPersonoftheWeek">
-              Here is some text12
+          <div id="LegalAdvice">
+              Legal
+          </div>
+          <div id="showMarketing">
+              Marketing
+          </div>
+          <div id="Crafting">
+              Crafting
+          </div>
+          <div id="Business">
+              Business
+          </div>
+          <div id="Sports">
+              Sports
           </div>
           <div id="Taxes">
-              Here is some text13
+              Taxes
+          </div>
+          <div id="showTechnologyProgramming">
+              Tech Programming
+          </div>
+          <div id="PrivacyPolicy">
+              Privacy Policy:
+              PointPerson.com will not share or sell personal information with any other entities.
+          </div>
+          <div id="FeaturedPointPersonoftheMonth">
+              FeaturedPointPerson
+          </div>
+          <div id="MusicArts">
+              Music & Arts
+          </div>
+          <div id="UsingPointPerson">
+              UsingPointPerson
           </div>
 
-
-
-          <textarea id="myText">
-            Lorem ipsum...
-        </textarea>
-          <form id="login">
-              <fieldset>
-                  <table>
-                      <tbody>
-                          <tr>
-                              <th>Create Account</th>
-                          </tr>
-                          <tr><td><input type="text">Enter Your Email</td></tr>
-                          <tr><td><input type="text">Choose Username</td></tr>
-                          <tr><td><input type="text">Choose a Password</td></tr>
-                          <tr><td><input type="text">Confirm Password</td></tr>
-                      </tbody>
-                  </table>
-              </fieldset>
-          </form>
       </div>
       <div id="termsOfService" style="hidden">
           Here are the terms of service
-          Blablablablab
-          Blalbalbla
-          Blablabla
-          blablabla
-          balblabla
-          'blablab
-          albalb
-          ablablabl
-          '
+          The rules are.....
 
 
       </div>
@@ -145,46 +115,44 @@
           <table id="botTableNavBar">
               <tr>
                   <th>Categories</th>
+                  <th>More</th>
                   <th>About</th>
-                  <th>Support/Contact Us</th>
                   <th>Follow Us</th>
               </tr>
               <tr>
                   <td><button onclick="showEC()">Education & Career</button></td>
-                  <td><button onclick="showWhatsaPointPerson()">What's a PointPerson</button></td>
-                  <td><button onclick="showHowtobeaPointPerson()">How to be a PointPerson?</button></td>
+                  <td><button onclick="showMarketing()">Marketing</button></td>
+                  <td><button onclick="showUsingPointPerson()">Using PointPerson.com</button></td>
                   <td><button onclick="showTwitter()">Twitter</button></td>
               </tr>
               <tr>
-                  <td><button onclick="showBusiness()">Business</button></td>
-                  <td><button onclick="showWhatsthepoint()">What's the point?</button></td>
-                  <td><button onclick="showBuyingSellingServices()">Buying/Selling Services</button></td>
+                  <td><button onclick="showFinancial()">Financial & Investing</button></td>
+                  <td><button onclick="showSports()">Sports</button></td>
+                  <td><button onclick="termsButton()">Terms of Service</button></td>
                   <td><button onclick="showFacebook()">Facebook</button></td>
               </tr>
               <tr>
-                  <td><button onclick="showTechnology()">Technology</button></td>
+                  <td><button onclick="showHomeAuto()">Home & Auto</button></td>
+                  <td><button onclick="showTechnologyProgramming()">Technology & Programing</button></td>
                   <td><button onclick="showPrivacyPolicy()">Privacy Policy</button></td>
-                  <td><button onclick="emailUs()">E-mail Us</button></td>
                   <td><button onclick="showInstagram()">Instagram</button></td>
               </tr>
               <tr>
-                  <td><button onclick="showHomeAutoRepairs()">Home/Auto Repairs</button></td>
-                  <td><button onclick="termsButton()">Terms of Service</button></td>
-                  <td><button onclick="showHelpPointPersoncom()">Help@PointPerson.com</button></td>
+                  <td><button onclick="showLifestyle()">Lifestyle & Health</button></td>
+                  <td><button onclick="showTaxes()">Taxes</button></td>
+                  <td><button onclick="emailUs()">Email Us Help@PointPerson.com</button></td>
               </tr>
               <tr>
-                  <td><button onclick="showLifestyle()">Lifestyle</button></td>
-                  <td><button onclick="showFeaturedPointPersonoftheWeek()">Featured PointPerson of the Week</button></td> <!-- Should we put this somewhere else?-->
-                  <td> </td>
+                  <td><button onclick="showLegalAdvice()">Legal Advice</button></td>
+                  <td><button onclick="showBusiness()">Business</button></td>
+                  <td><button onclick="showFeaturedPointPersonoftheMonth()">Featured PointPerson of the Month</button></td>
                   <td id="pointDate"> PointPerson.com  </td>
               </tr>
               <tr>
-                  <td><button onclick="showTaxes()">Taxes</button></td>
-
+                <td><button onclick = "showMusicArts()">Music & Arts</button></td>
+                <td><button onclick = "showCrafting()">Crafting</button></td>
               </tr>
-
-
-          </table>
+            </table>
 
 
 
