--- a/CreateAccount.html
+++ b/CreateAccount.html
@@ -19,7 +19,7 @@
           <p><a style="color:rgb(205,230,255)";> Find services and learn from others </a><p>
               <table id="TopRight">
                     <tr>
-                        <th style="width:60%"; style="padding-left:10%"; <div id="searchBar">
+                        <th style="width:60%"; style="padding-left:10%";> <div id="searchBar">
                           <table id="searchRow">
                             <tr>
                             <form class = "searchForm">
@@ -30,6 +30,7 @@
                         </table>   </th>
                         <th style="width:10%";><a style="color:rgb(85,142,213)"; href= "CreateAccount.html">Create Account</a> </th>
                         <th style="width:5%";><a style="color:rgb(85,142,213)"; href="Log_In.html">Log In</a></th>
+                      </div>
                     </tr>
                     </table>
           </div>
