--- a/EmailUs.html
+++ b/EmailUs.html
@@ -19,7 +19,7 @@
           <p><a style="color:rgb(205,230,255)";> Find services and learn from others </a><p>
               <table id="TopRight">
                     <tr>
-                        <th style="width:60%"; style="padding-left:10%"; <div id="searchBar">
+                        <th style="width:60%"; style="padding-left:10%";> <div id="searchBar">
                           <table id="searchRow">
                             <tr>
                             <form class = "searchForm">
